--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-image: url("../img/background.gif");
+    background-image: url("../img/background2.gif");
     background-repeat:no-repeat;
     background-size:cover;
     background-color: #181818;
